--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project for adidas</title>
+    
  <link rel="stylesheet" href="style.css"> 
 
 </head>
@@ -41,7 +42,7 @@
 <input type="button" value="search">
 <input type="search" placeholder="click here"> 
    
-
+<a href="page1.html"></a>
 
 
 <div>
